--- a/games.html
+++ b/games.html
@@ -178,6 +178,15 @@
 
 	<tr>
 	<th>
+	<div class="snake">
+    <iframe frameborder="0" src="https://itch.io/embed/2410554?border_width=5&amp;bg_color=EEF296&amp;fg_color=000&amp;link_color=508D69&amp;border_color=508D69" width="560" height="175"><a href="https://miagaming.itch.io/reverse-snake">Reverse Snake by Mia</a></iframe>
+    </div>
+	</th>
+	<td> snake but YOUR the APPLe </td>
+	</tr>
+    	
+    <tr>
+	<th>
 	<div class="ftss">
 	<img src="assets/MAN.png" width="560" height="175"/>
 	</div>
