--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@ f
   
   <tr><th>26/11/2023</th><td>-</td><td><span>massive update, changed like 30 ass pages idk and added 19 pages! updated HELL and stuff. new ways to get to previously inaccesible pages.<br>2 new secret areas<br>put some buttons at the bottom of the page, gumi, silver, sky, vae, mine and then cool blinkie site<br>the thing lists 83 changed files, with ~25 of them being pages<br>still haven't fixed the sine wave lmao</span></td></tr>
   <tr><th>30/11/2023</th><td>-</td><td><span>added some embeds to my main page and added a buttons page to collect buttons</span></td></tr>
+  <tr><th>13/12/2023</th><td>-</td><td><span>did the john page and added an overcomplicated binary to decimal converter on code.html, also added my new snake game to games.html :33333</span></td></tr>
   <tr><th></th><td></td><td></td></tr>
   </table>
   
@@ -526,6 +527,7 @@ Bugs and stuff can be reported to me (Contact is on about me (not yet im working
 
 <br>
 
+<br>
 <script>
 var slider1 = document.getElementById("delayslider");
 var variable1 = document.getElementById("delaydisplay");
@@ -570,7 +572,6 @@ slider1.oninput = function() {
 Current Viewers:<script language="javascript" type="text/javascript" src="https://counter1.fc2.com/views.php?id=39381451&main=1"></script><noscript><img src="https://counter1.fc2.com/counter_now.php?id=39381451&main=1" /></noscript>
 <!-- FC2 Counter  Ends here -->
 </div>
-
 <br>
 <iframe src="https://john.citrons.xyz/embed?ref=miastonished.github.io" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe>
 
