--- a/newcode.html
+++ b/newcode.html
@@ -208,7 +208,7 @@ please follow the steps to install the required drivers.<br><br>
 
 Step 1 and 2:<br><br>
                 
-Will install and upgrade the ISC 3.0 Database Engine. You               
+Will install and upgrade the <a href='https://www.youtube.com/watch?v=9ZqsRTabOlk'>ISC 3.0 Database Engine</a>. You               
 must install them.<br><br>
 
 Step 3:<br>
@@ -227,6 +227,8 @@ run c:\isb3\isb3.exe.<br><br><br>
 Please feel free to let us know how you like our product.  <br><br>
 
 email to isb3@coomedia.com
+<br><br><br><br>
+3T5-GCN-XGG
 </center>
 <div id="funny">
 <script>
