--- a/binary.html
+++ b/binary.html
@@ -8,7 +8,14 @@
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#2a8000, rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
-	body {background-color:#008080;color:#fdffff}
+	body {
+        background-color:#006060; background-image: url('assets/art/binary.png');background-size:20px;color:#fdffff;
+        image-rendering: -moz-crisp-edges;
+        image-rendering: -o-crisp-edges;
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: pixelated;
+        -ms-interpolation-mode: nearest-neighbor;
+    }
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
 	.links{background-color: #818181;color: fdffff;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block;outline-color: #818181;outline-width: 5px;outline-style: outset;}
@@ -17,17 +24,17 @@
 	button{background-color: #818181;outline-color: #818181;outline-width: 5px;outline-style: outset;border:none;}
     button:hover{outline:5px #818181 inset;}
 	.top{
-		background-color: #c3c3c3;
+		background-color: #b3b3b3;
 		width: 1400px;
 		outline-color: #c3c3c3;
 		outline-style: outset;
         outline-width: 5px;
 		padding-top: 5px;
 		padding-bottom: 5px;
-		box-shadow: 10px 10px #2a5f55;
+		box-shadow: 20px 20px 10px 0px #00000040;
 	}
 	.middle{
-		background-color: #c3c3c3;
+		background-color: #b3b3b3;
 		width: 700px;
 		/*height: 800px;*/
 		outline-color: #c3c3c3;
@@ -35,7 +42,7 @@
 		padding: 25px;
         outline-width: 5px;
 		position: relative;
-		box-shadow: 10px 10px #2a5f55;
+		box-shadow: 20px 20px 10px 0px #00000040;
 	}
 	.part2{
 		background-color: #c3c3c3;
