finally should work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     Mia's EPIC Site
     </title>
 	<meta name="description" content="This site is very epic!">
-    <link href="osd.xml" rel="search" title="mias epic search!" type="application/opensearchdescription+xml">
+    <link href="osd.xml" rel="search" title="Miastonished" type="application/opensearchdescription+xml">
 	<script>
 	function title(){
 		document.title = ""+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+" Mia's EPIC Site "+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random());
