--- a/code.html
+++ b/code.html
@@ -127,8 +127,10 @@
 <p id="dis"> :) </p>
 
 <br><br>
-
-<a href='binary.html' class='links'>purposefully very inefficient binary to decimal converter!!!!</a>
+<br>
+<h2> SUBPAGES: </h2>
+<a href='binary.html' class='links'>purposefully very inefficient binary to decimal converter!!!!</a><br><br>
+<a href='random.html' class='links'>silly way<!--s--> of generating random strings</a>
 <!--<div class='overcomp'>
     <p>The purposefully least efficient binary to decimal converter ever</p>
     <input type='text' id='bin' placeholder="binary go here :3"></input>
@@ -282,7 +284,28 @@ while 1:
 #python
 </div>
 </pre>
+<h3>cool css rainbow text animation</h3>
+<pre>
+<div class="codebox" id="c4">
+@keyframes rainbowtext{
+    0%  {color: #aa0000}
+    16% {color: #aaaa00}
+    33% {color: #00aa00}
+    50% {color: #00aaaa}
+    66% {color: #0000aa}
+    83% {color: #aa00aa}
+    100%{color: #aa0000}
+}
 
+</div>
+</pre>
+
+
+<!--
+<textarea>
+aHR0cHM6Ly9taWFzdG9uaXNoZWQuZ2l0aHViLmlvLyU3MCU3NSU2NyU1NCUxMSUyNCU0NiUzMSUzNSUxOCU2NyUxMSU1OSU0MSU2OSUzMyU0MyU3OCUzMCU2OCU1MiUxOCU3MSUyNiUxNCU2MyUyOSU0NCUyNyUzNiU1NSU1MCUxMiUyNyU1NiUzNCU0OSU0NyUyOSU2NiUxNyUxMyU3OCU2MiUzMCUxMiU2MiU1MyUyMyU2NyU3MiUxNSU1NCU1MCU3MSU1OCUzOCUyMyU2NSU2MCU1MiUuaHRtbA==
+</textarea>
+-->
 </div>
 
 </center>
