--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ Bugs and stuff can be reported to me (Contact is on about me (not yet im working
   
 <!--<blockquote class="twitter-tweet" data-lang="ar" data-theme="dark"><p lang="en" dir="ltr">i just realised how deep connect 4 is like you are literally connnecting peoples souls <a href="https://twitter.com/hashtag/deep?src=hash&amp;ref_src=twsrc%5Etfw">#deep</a></p>&mdash; Will94 (@WiII914) <a href="https://twitter.com/WiII914/status/1480504218465099777?ref_src=twsrc%5Etfw">١٠ يناير ٢٠٢٢</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 <div class="tumblr-post-thing">
-<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/Bv3d9F2Ebo9-KItRNAH4xw/701242285150650368" data-language="hi_IN"><a href="https://miastonished.tumblr.com/post/701242285150650368/mia-is-it-true-that-you-are-the-developer-of-the">https://miastonished.tumblr.com/post/701242285150650368/mia-is-it-true-that-you-are-the-developer-of-the</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
+<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/Bv3d9F2Ebo9-KItRNAH4xw/701242285150650368" data-language="hi_IN"><a href="https://awnemia.tumblr.com/post/701242285150650368/mia-is-it-true-that-you-are-the-developer-of-the">LOADING TEH EPIX TUMBLAH POSTZ &lt;W&gt;</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
 </div>
 <br>
 <br>
