--- a/buttons.html
+++ b/buttons.html
@@ -139,6 +139,8 @@ in the future when i collect more buttons i'll sort them by colour :3333<br><br>
 <a href="https://muncee.neocities.org/"><img src="assets/buttons/hzrn.gif"></a>
 
 <a href="https://committy.glitch.me"><img src="https://sbig2023-committy.glitch.me/assets/img/committy_button.jpg"></a>
+<a href="https://transbro.neocities.org/"><img src="assets/buttons/transbro.gif"></a>
+<a href="https://wynns-wonderful-pixel-paradise.neocities.org/"><img src="assets/buttons/pixelparadise.gif"></a>
 <a class=' emptbutt' href='https://' target='_blank'></a>
 <a class=' emptbutt' href='https://' target='_blank'></a>
 <a class=' emptbutt' href='https://' target='_blank'></a>
