--- a/scrap.html
+++ b/scrap.html
@@ -70,21 +70,21 @@
 		height: 100%;
 		position: absolute;
 		top: 20px;
-		animation: yipee 0.5s linear infinite;
+		animation: yipee 10s linear infinite;
 		left: 50%;
 	}	
 	.dolp2 {
 		height: 100%;
 		position: fixed;
 		top: 20px;
-		animation: yipee 1s linear infinite;
+		animation: yipee 5s linear infinite;
 		left: 50%;
 	}
 	.dolp3 {
 		height: 100%;
 		position: absolute;
 		top: 20px;
-		animation: yipee 0.25s linear infinite;
+		animation: yipee 100s linear infinite;
 		left: 50%;
 	}
 	@keyframes yipee {
@@ -100,7 +100,13 @@
 		opacity: 1;
 		z-index: 4;
 		pointer-events: none;
-	}	
+	}
+    .coRedirect {
+        width: 25%;
+        height: 100px;
+        background-color: white;
+        font-size: 2em;
+    }
 	</style>
 	<script>
 	//confirm("Hello can you \"Please\" Join my Gift Crad GiverWay?!");
@@ -122,7 +128,9 @@
 	<script src="links.js" type="text/javascript"></script><br><br>
 	<br>
 </div>
-<div class="popup"></div>
+<div class="popup"></div><h1>
+ANDREOLOGY (REDIRECTED FROM ANDROELOGY) NOT TO BE CONFUSED WITH ANDROLOGY, AN%00%01%02
+</h1>
 <div class="cruel"> 
 <div class="in92">wrq</div>
 <div class="rust">Yqweqwrekfniogwjeitjioawrjwaiejrwokerowkeqqwkeoqwkeoqwkoekqwopaoergpwakeqweel</div>
@@ -130,9 +138,17 @@
 <img class="dolp2" src="assets/img/emmet.gif"/>
 <img class="dolp3" src="assets/img/emmet.gif"/>
 </div>
+BLOOD NBLOOD BLOOD LBOOD
 <div class="the"></div>
 <div class="millennial"></div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<a href='core.html' class='coRedirect'>
+CLICK HERE TO LEAVE IM BE
+
+
+</a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br>
 <img onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" src="assets/art/silverad1.png" width="100px"/>
 <br>
