--- a/index.html
+++ b/index.html
@@ -43,7 +43,22 @@
         outline-width:0px;
         border-radius: 0px;
         transition: top 0.2s;
+    }
+    .buttonlink  {
+        width: 712px;
+        height: 62px;
+        padding: 0px;
+        top: 0px;
+        transform: scale(1);
+        border-width: 0px;
+        outline-width:0px;
+        border-radius: 0px;
+        font-size: 40px;
     }    
+    .buttonlink:hover{
+        border-width:0px; top:0px;
+    }
+    
     .button88x31 > img {
         width: 176px;
         height: 62px;
@@ -442,13 +457,19 @@ function sine(){
     <!-- FC2 Counter  Starts here -->
     <script language="javascript" type="text/javascript" src="https://counter1.fc2.com/counter.php?id=39381451&main=1"></script><noscript><img src="https://counter1.fc2.com/counter_img.php?id=39381451&main=1" /></noscript>
     <!-- FC2 Counter  Ends here -->
+    
     </div>
 </center>
 </div>
 
 <center>
 <div class="news">
-  this site is updated regularly :3
+
+  <h3> -- EPILEPSY WARNING -- </h3>
+  this site contians a large amount of fast moving and flashing gifs and elements<br>
+  as well as some screen shakes<br>
+  if you have photosensitive epilepsy then probably don't be on this site soz
+  
   <h3>-- NEWS / CHANGELOG --</h3>
   <table class="newstable">
   <div class="topshelfspyvoiceline"><tr><th>Date</th><td></td><td>Update</td></tr></div>
@@ -475,9 +496,15 @@ function sine(){
   <tr><th>30/11/2023</th><td>-</td><td><span>added some embeds to my main page and added a buttons page to collect buttons</span></td></tr>
   <tr><th>13/12/2023</th><td>-</td><td><span>did the john page and added an overcomplicated binary to decimal converter on code.html, also added my new snake game to games.html :33333</span></td></tr>
   <tr><th>19/12/2023</th><td>-</td><td><span>fixed the sine waves 😲😲😲😲😲😲😲😲😲😲😲😲😲</span></td></tr>
+  <tr><th>07/03/2024</th><td>-</td><td><span>button update :astonished: added some more buttons to the button page including jemmas and updated the link for the palestine one to take you to an offsite link with more links. also changed the css of that page slightlyyyyy. hm what else have i done this update? Started to hide some yummy raspberries around the place,
+    <br> added some fun new secret pages and also an epilepsy warning thing at the top of this page 
+  </span></td></tr>
+  
   
   <tr><th></th><td></td><td></td></tr>
   </table>
+    <br>
+    this site is updated regularly :3
   
 </div>
 <div class="footer">
@@ -606,8 +633,7 @@ slider1.oninput = function() {
 <a class='button88x31' href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
 <br>
 <a class='button88x31' href='miasepicsite/' target='_blank'><img src='assets/art/placeholderbutton.gif'></a>
-
-<a class='button88x31 emptbutt' href='https://' target='_blank'></a>
+<a class='button88x31' href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
 <a class='button88x31 emptbutt' href='https://' target='_blank'></a>
 <a class='button88x31 emptbutt' href='https://' target='_blank'></a>
 <br>
@@ -623,7 +649,7 @@ slider1.oninput = function() {
 <a class='button88x31 emptbutt' href='https://' target='_blank'></a>
 <a class='button88x31' href='https://arab.org/click-to-help/palestine/' target='_blank'><img src='assets/art/88x31palestine.png'></a>
 <br>
-<a href='buttons.html'>more buttons</a>
+<a class='buttonlink' href='buttons.html'>more buttons</a>
 
 <br>
 
