--- a/pride.html
+++ b/pride.html
@@ -226,14 +226,10 @@
 		background-image: 
 			linear-gradient(
 				180deg,
-				#D52D00,
 				#D52D00 20%,
-				#FF9A56 20%,
-				#FF9A56 40%,
-				#FFFFFF 40%,
-				#FFFFFF 60%,
-				#D162A4 60%,
-				#D162A4 80%,
+				#FF9A56 20% 40%,
+				#FFFFFF 40% 60%,
+				#D162A4 60% 80%,
 				#B00B69 80%
 			);
 	}
