--- a/buttons.html
+++ b/buttons.html
@@ -7,7 +7,7 @@
 	<style>
 	html, body {margin:0;padding:0;background-color:#444441; position: relative;}
     body{  background-image: url('assets/art/buttonbg.png'); }
-    html{  background-image: url('assets/art/buttonbglarge.png'); ]
+    html{  background-image: url('assets/art/buttonbglarge.png'); }
 	.container { 
 		padding-left:12.5px;
 		padding-right:12.5px;
