--- a/index.html
+++ b/index.html
@@ -498,6 +498,8 @@ function sine(){
   <tr><th>19/12/2023</th><td>-</td><td><span>fixed the sine waves 😲😲😲😲😲😲😲😲😲😲😲😲😲</span></td></tr>
   <tr><th>07/03/2024</th><td>-</td><td><span>button update :astonished: added some more buttons to the button page including jemmas and updated the link for the palestine one to take you to an offsite link with more links. also changed the css of that page slightlyyyyy. hm what else have i done this update? Started to hide some yummy raspberries around the place,
     <br> added some fun new secret pages and also an epilepsy warning thing at the top of this page 
+    <br> (SUB UPDATE): fixed the button page cause i had a stray ] at the start ofthe css and most browsers don't ignore that, also spawned the contact page its pretty barebones <br>
+    also made the warning button respawn
   </span></td></tr>
   
   
