--- a/buttons.html
+++ b/buttons.html
@@ -174,49 +174,34 @@ click on a button to go to the respective site :3 <br><br>
 <a href="https://yesterweb.org/no-to-web3/"><img src="assets/buttons/web3.gif"></a>
 <a class='fallercont' href="javascript:bgbreak()"><img id='faller' src="assets/art/warningbtn.png"></a>
 
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
+<a href='https://glarfe.neocities.org'><img src='assets/buttons/glarfe.png'> </a> 
+<a href='https://textures.neocities.org/'><img src='assets/buttons/textures.gif'> </a> 
+<a href='https://gifypet.neocities.org/'><img src='assets/buttons/gify.gif'> </a> 
 
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
-<a class=' emptbutt' href='https://' target='_blank'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
 <br>
 
 </div>
