--- a/random.html
+++ b/random.html
@@ -161,5 +161,7 @@
 </div>
 
 <div> <!--class="footer"-->
+<a href='https://www.tumblr.com/blinkees/743506545612128256/do-you-have-any-dave-strider-homestuck-blinkies?source=share'><img src='assets/img/dave.gif'/></a>
+
 <br><br><br><br><br>
 </div>
