index top overhaul

--- a/buttons.html
+++ b/buttons.html
@@ -141,7 +141,10 @@ click on a button to go to the respective site :3 <br><br>
 <div class='buttonholder'>
 <a href='https://miastonished.github.io' target='_blank'><img src='assets/buttons/button.gif'></a>
 <a href='https://gumi.gay' target='_blank'><img src='assets/buttons/gumi.gif'></a>
+<a href="https://batashock.github.io/"><img src="assets/buttons/bata.png"></a>
+
 <a href='https://silvershorthair.github.io' target='_blank'><img src='assets/buttons/silver.png'></a>
+
 <a href='https://skysupercharged.github.io' target='_blank'><img src='assets/buttons/sky.png'></a>
 <a href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
 <a href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
@@ -177,7 +180,11 @@ click on a button to go to the respective site :3 <br><br>
 <a href='https://glarfe.neocities.org'><img src='assets/buttons/glarfe.png'> </a> 
 <a href='https://textures.neocities.org/'><img src='assets/buttons/textures.gif'> </a> 
 <a href='https://gifypet.neocities.org/'><img src='assets/buttons/gify.gif'> </a> 
+<a href='https://versary.town/'><img src='assets/buttons/versary.png'> </a> 
 
+
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
