--- a/aboutme.html
+++ b/aboutme.html
@@ -147,6 +147,30 @@
         right: 240px; 
         top: 280px;
         transform: rotate(-2deg);
+    }    
+    .ct{
+        font-size: 40px;
+        background: #0c0;
+        color: white;
+        text-decoration: none;
+        border-radius: 15px;
+        width:250px;
+        position: absolute;
+        right: 320px; 
+        top: 350px;
+        transform: rotate(0.5deg);
+    }
+    .bc{
+        font-size: 40px;
+        background: #c0a;
+        color: white;
+        text-decoration: none;
+        border-radius: 15px;
+        width:250px;
+        position: absolute;
+        right: 300px; 
+        top: 370px;
+        transform: rotate(-10deg);
     }
     .secrets{
         font-size: 40px;
@@ -177,10 +201,12 @@
 <br>
 <p class="p1">Hi im Mia, I go by she/they pronouns so if you ever want to talk about me behind my back now you know :3</p>
 <p class="p3">my gender is ninety nine point nine (followed by twelve duodecillion to the power of ten to the power of one hundered nines and then a 7) percent girl and the remainder is several mispellings of girl</p> 
-<p class="p1">Thats all you need to know ig</p>
+<p class="p1">Thats all you need to know ig</p>s
 <div class="yt"><a class="yt" href="https://www.youtube.com/@miastonished"> My Youtube </a></div>
-<div class="tm"><a class="tm" href="https://miastonished.tumblr.com/"> My Tumblr </a></div>
+<div class="tm"><a class="tm" href="https://awnemia.tumblr.com/"> My Tumblr </a></div>
 <div class="bt"><a class="bt" href="butter.png"> Butter Images </a></div>
+<div class="ct"><a class="ct" href="contact.html"> Contact Me </a></div>
+<div class="bc"><a class="bc" href="buttons.html"> Button Collection </a></div>
 <!--<div class="secrets"><a class="secrets" href="secrets.html"> My Seçr<span id="glitche">e</span>ts </a></div>-->
 <!-- add in later -->
 
