--- a/buttons.html
+++ b/buttons.html
@@ -137,6 +137,7 @@ my button:
 <br>
 if you want me to add or remove your button (or update it) contact me <a href='contact.html'>here</a> :3<br>
 in the future when i collect more buttons i'll sort them by colour :3333<br><br>
+i didn't make any of the buttons here unless they are also on <a href='mybuttons.html'>My Button Page</a> or are the purple hat one <br>
 click on a button to go to the respective site :3 <br><br>
 <div class='buttonholder'>
 <a href='https://miastonished.github.io' target='_blank'><img src='assets/buttons/button.gif'></a>
@@ -181,6 +182,7 @@ click on a button to go to the respective site :3 <br><br>
 <a href='https://textures.neocities.org/'><img src='assets/buttons/textures.gif'> </a> 
 <a href='https://gifypet.neocities.org/'><img src='assets/buttons/gify.gif'> </a> 
 <a href='https://versary.town/'><img src='assets/buttons/versary.png'> </a> 
+<a href='https://silvershorthair.github.io/AboutMe.html'><img src='assets/buttons/lilith.gif'> </a> 
 
 
 <a class=' emptbutt'></a>
