--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         border-width: 10px;
         border-color: #350000;
 		padding-top: 10px;
-		padding-bottom: 50px;
+		padding-bottom: 10px;
         position: relative;
 	}
 	.sinettings{
@@ -441,6 +441,10 @@
     also made the warning button respawn
   </span></td></tr>
   <tr><th>08/03/2024</th><td>-</td><td><span>rearranged main page slightly and finally added a site logo after almost 3 years of coooool website</span></td></tr>
+  <tr><th>09/03/2024</th><td>-</td><td><span>did a visual overhaul of the top of the main page and added some more buttons
+  <br> also added a page where you can view the buttons i've made<br>
+  and added some links, including one to that page, to my about me :3
+  </span></td></tr>
   
   
   <tr><th></th><td></td><td></td></tr>
@@ -630,9 +634,11 @@ Current Viewers:<script language="javascript" type="text/javascript" src="https:
 if u cant see this then that may be a problem
 <p class="white">if you cant see this then i understand why</p>
 
-
+LILITH 2024 <br>
+<img src='assets/buttons/lilith2.gif'/> <a href='mybuttons.html'><img src='assets/buttons/button3.png'/></a>
 </div>
 <br><a href="TheReal"> check out         site!! </a><br><br><br><br>
+
 </div>
 </center>
 <script>
