--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
         top: -20px;
         transform: scale(1.2);
     }
+    #haiix3{
+        display: none;
+    }
 	</style>
 </head>
 <body onload="sine();">
@@ -360,7 +363,7 @@
 <div class="header">
 	<center>
 	<div class="menu">
-		<!--<h1 id="haiix3">hi</h1>-->
+		<h1 id="haiix3">hi</h1>
         <!--<img class='bannerMain' src='assets/art/miasEpicSiteBannerTruncated.png' title='hi' alt='Scrawly black handdrawn text saying Mias Epic Site in all caps'/><br>
 -->
 <!--        DON"T PIBLISH THIS VERSION THE SINE WAVE IS FACKY WACKY-->
@@ -635,7 +638,7 @@ if u cant see this then that may be a problem
 <p class="white">if you cant see this then i understand why</p>
 
 LILITH 2024 <br>
-<img src='assets/buttons/lilith2.gif'/> <a href='mybuttons.html'><img src='assets/buttons/button3.png'/></a>
+<img src='assets/buttons/lilith2.gif'/> <a href='mybuttons.html'><img src='assets/buttons/button2.png'/></a>
 </div>
 <br><a href="TheReal"> check out         site!! </a><br><br><br><br>
 
