--- a/mybuttons.html
+++ b/mybuttons.html
@@ -54,9 +54,10 @@
 </div>
 all here free to use <b>with credit</b> :3<br><br>
 <h2> ones for this site :3 </h2>
-download whichever one fits your site the most and make it link to my site :3<br><br>
+download or link to whichever one fits your site the most and make it link to my site :3<br><br>
 <img src="assets/buttons/button.gif" onclick='' height="62px" width="176px"/><br>
 <img src="assets/buttons/button2.png" onclick='' height="62px" width="176px"/><br>
+<img src="assets/buttons/button3.gif" onclick='' height="62px" width="176px"/><br>
 <!--<img src="assets/buttons/button3.png" onclick='' height="62px" width="176px"/><br>-->
 
 <h2> others :O </h2>
