--- a/buttons.html
+++ b/buttons.html
@@ -149,11 +149,14 @@ click on a button to go to the respective site :3 <br><br>
 <a href='https://skysupercharged.github.io' target='_blank'><img src='assets/buttons/sky.png'></a>
 <a href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
 <a href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
+<a class='button88x31' href="https://xzan-corvus.github.io/XzanCorvusEnterprises/"><img src="assets/buttons/xzan_proto.gif"></a>
+<a class='button88x31' href="https://fabledbugs.github.io/"><img src="assets/buttons/bugs.png"></a>
 
 
 <!--<a href='https://arab.org/click-to-help/palestine/' target='_blank'><img src='assets/art/88x31palestine.png'></a>-->
-<a href='https://www.tumblr.com/sulfurcosmos/732456971539775488/how-you-can-help-palestine' target='_blank'><img src='assets/art/88x31palestine.png'></a>
 <a href='https://blinkies.cafe' target='_blank'><img src='https://blinkies.cafe/b/display/blinkiesCafe-badge.gif' alt='blinkies.cafe | make your own blinkies!'></a>
+<a href='https://www.tumblr.com/sulfurcosmos/732456971539775488/how-you-can-help-palestine' target='_blank'><img src='assets/art/88x31palestine.png'></a>
+
 <a href="https://chiitopia.neocities.org"><img src="https://chiitopia.neocities.org/images/balls.png" alt="chiitopia"></a>
 
 <a href='https://motan.gay/' target='_blank'><img src='assets/buttons/motan.png'></a>
@@ -183,6 +186,7 @@ click on a button to go to the respective site :3 <br><br>
 <a href='https://gifypet.neocities.org/'><img src='assets/buttons/gify.gif'> </a> 
 <a href='https://versary.town/'><img src='assets/buttons/versary.png'> </a> 
 <a href='https://silvershorthair.github.io/AboutMe.html'><img src='assets/buttons/lilith.gif'> </a> 
+<a href='https://maia.crimew.gay'><img src='assets/buttons/maia.png'> </a> 
 
 
 <a class=' emptbutt'></a>
