--- a/aboutme.html
+++ b/aboutme.html
@@ -184,6 +184,9 @@
         top: 425px;
         transform: rotate(0deg);
     }
+    .rightarea{
+        float: right;
+        } 
 	</style>
 </head>
 <body>
@@ -217,6 +220,14 @@
 <img class="pillar" src="assets/art/pillar2.png" draggable="true"/>
 
 <div class="biggap"> </div>
+
+<div class='rightarea'>
+
+<a href='http://www.mabsland.com/Adoption.html'><img src='assets/img/Censor_Ma.gif'/></a>
+<iframe width="180" height="180" style="border:none" src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
+
+</div>
+<br>
 
 <div class="footer2">
 
