--- a/buttons.html
+++ b/buttons.html
@@ -156,6 +156,7 @@ click on a button to go to the respective site :3 <br><br>
 <!--<a href='https://arab.org/click-to-help/palestine/' target='_blank'><img src='assets/art/88x31palestine.png'></a>-->
 <a href='https://blinkies.cafe' target='_blank'><img src='https://blinkies.cafe/b/display/blinkiesCafe-badge.gif' alt='blinkies.cafe | make your own blinkies!'></a>
 <a href='https://www.tumblr.com/sulfurcosmos/732456971539775488/how-you-can-help-palestine' target='_blank'><img src='assets/art/88x31palestine.png'></a>
+<a href="https://transbro.neocities.org/"><img src="assets/buttons/transbro.gif"></a>
 
 <a href="https://chiitopia.neocities.org"><img src="https://chiitopia.neocities.org/images/balls.png" alt="chiitopia"></a>
 
@@ -175,7 +176,6 @@ click on a button to go to the respective site :3 <br><br>
 <a href="https://muncee.neocities.org/"><img src="assets/buttons/hzrn.gif"></a>
 
 <a href="https://committy.glitch.me"><img src="https://sbig2023-committy.glitch.me/assets/img/committy_button.jpg"></a>
-<a href="https://transbro.neocities.org/"><img src="assets/buttons/transbro.gif"></a>
 <a href="https://wynns-wonderful-pixel-paradise.neocities.org/"><img src="assets/buttons/pixelparadise.gif"></a>
 <a href="https://goop.house/"><img src="assets/buttons/goop.gif"></a>
 <a href="https://yesterweb.org/no-to-web3/"><img src="assets/buttons/web3.gif"></a>
@@ -187,7 +187,10 @@ click on a button to go to the respective site :3 <br><br>
 <a href='https://versary.town/'><img src='assets/buttons/versary.png'> </a> 
 <a href='https://silvershorthair.github.io/AboutMe.html'><img src='assets/buttons/lilith.gif'> </a> 
 <a href='https://maia.crimew.gay'><img src='assets/buttons/maia.png'> </a> 
+<a href='https://aiston.scungled.gay/'><img src='assets/buttons/aiston.gif'> </a> 
+<a href='https://foggybear42.neocities.org' target='_blank'><img src='https://foggybear42.neocities.org/images/foggybear.gif' alt="foggybear42"></a>
 
+<a href="https://dimden.dev/"><img src="https://dimden.dev/images/88x31.gif"></a>
 
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
