--- a/index.html
+++ b/index.html
@@ -447,6 +447,8 @@
   <tr><th>09/03/2024</th><td>-</td><td><span>did a visual overhaul of the top of the main page and added some more buttons
   <br> also added a page where you can view the buttons i've made<br>
   and added some links, including one to that page, to my about me :3
+  <tr><th>11/03/2024</th><td>-</td><td><span>finished lock A01</span></td></tr>
+
   </span></td></tr>
   
   
