--- a/aboutme.html
+++ b/aboutme.html
@@ -223,7 +223,7 @@
 
 <div class='rightarea'>
 
-<a href='http://www.mabsland.com/Adoption.html'><img src='assets/img/Censor_Ma.gif'/></a>
+<a href='http://www.mabsland.com/Adoption.html'><img src='assets/img/Censor_14a.gif'/></a>
 <iframe width="180" height="180" style="border:none" src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
 
 </div>
