--- a/buttons.html
+++ b/buttons.html
@@ -178,19 +178,20 @@ click on a button to go to the respective site :3 <br><br>
 <a href="https://committy.glitch.me"><img src="https://sbig2023-committy.glitch.me/assets/img/committy_button.jpg"></a>
 <a href="https://wynns-wonderful-pixel-paradise.neocities.org/"><img src="assets/buttons/pixelparadise.gif"></a>
 <a href="https://goop.house/"><img src="assets/buttons/goop.gif"></a>
-<a href="https://yesterweb.org/no-to-web3/"><img src="assets/buttons/web3.gif"></a>
-<a class='fallercont' href="javascript:bgbreak()"><img id='faller' src="assets/art/warningbtn.png"></a>
+<a href="https://yesterweb.org/no-to-web3/"><img src="assets/buttons/web3.gif"/></a>
+<a class='fallercont' href="javascript:bgbreak()"><img id='faller' src="assets/art/warningbtn.png"/></a>
 
-<a href='https://glarfe.neocities.org'><img src='assets/buttons/glarfe.png'> </a> 
-<a href='https://textures.neocities.org/'><img src='assets/buttons/textures.gif'> </a> 
-<a href='https://gifypet.neocities.org/'><img src='assets/buttons/gify.gif'> </a> 
-<a href='https://versary.town/'><img src='assets/buttons/versary.png'> </a> 
-<a href='https://silvershorthair.github.io/AboutMe.html'><img src='assets/buttons/lilith.gif'> </a> 
-<a href='https://maia.crimew.gay'><img src='assets/buttons/maia.png'> </a> 
-<a href='https://aiston.scungled.gay/'><img src='assets/buttons/aiston.gif'> </a> 
+<a href='https://glarfe.neocities.org'><img src='assets/buttons/glarfe.png'></a> 
+<a href='https://textures.neocities.org/'><img src='assets/buttons/textures.gif'></a> 
+<a href='https://gifypet.neocities.org/'><img src='assets/buttons/gify.gif'></a> 
+<a href='https://versary.town/'><img src='assets/buttons/versary.png'></a> 
+<a href='https://silvershorthair.github.io/AboutMe.html'><img src='assets/buttons/lilith.gif'></a> 
+<a href='https://maia.crimew.gay'><img src='assets/buttons/maia.png'></a> 
+<a href='https://aiston.scungled.gay/'><img src='assets/buttons/aiston.gif'></a> 
 <a href='https://foggybear42.neocities.org' target='_blank'><img src='https://foggybear42.neocities.org/images/foggybear.gif' alt="foggybear42"></a>
 
 <a href="https://dimden.dev/"><img src="https://dimden.dev/images/88x31.gif"></a>
+<a href="https://doqmeat.neocities.org"><img src="assets/buttons/doqmeat.png"></a>
 
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
