--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
   <br> also added a page where you can view the buttons i've made<br>
   and added some links, including one to that page, to my about me :3
   <tr><th>11/03/2024</th><td>-</td><td><span>finished lock A01</span></td></tr>
+  <tr><th>13/03/2024</th><td>-</td><td><span>added the wii-ring :3 and moar button<s>z</s> x3</span></td></tr>
 
   </span></td></tr>
   
