--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 	.news{
 		background-color: #660101;
 		width: 1000px;
-		border-radius: 10px 50px 25px 25px;
+		border-radius: 50px 50px 25px 25px;
 		padding-top: 10px;
 		padding-bottom: 50px;
         border-style: none none solid none;
@@ -352,6 +352,11 @@
     #haiix3{
         display: none;
     }
+    wii-ring::part(wii-ring-container) {
+        border-radius: 50px 10px 10px 10px !important;
+        background-color: #aa0000 !important;
+        border-color: #440000 !important;
+    }
 	</style>
 </head>
 <body onload="sine();">
@@ -409,7 +414,7 @@
 <center>
 <div class="news">
 
- <div style="width: 160px; position: absolute; top: 5px; left: 5px; filter: brightness(0.75);/* <- Set any width you'd like! */">
+ <div style="width: 160px; position: absolute; top: 5px; left: 5px;/* <- Set any width you'd like! */">
 <wii-ring site="https://miastonished.github.io" variant="wii-mini"></wii-ring>
 </div>
 
