--- a/buttons.html
+++ b/buttons.html
@@ -192,6 +192,7 @@ click on a button to go to the respective site :3 <br><br>
 
 <a href="https://dimden.dev/"><img src="https://dimden.dev/images/88x31.gif"></a>
 <a href="https://doqmeat.neocities.org"><img src="assets/buttons/doqmeat.png"></a>
+<a href="https://sugarforbrains.neocities.org/"><img src="assets/buttons/sugar.gif"></a>
 
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
